<resources>
    <string name="app_name">CTscan</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="NotHaveAccount">Don’t have an account yet ?</string>
    <string name="register">Register</string>
    <string name="desc">description</string>
    <string name="labelRegister">Welcome to DeteCT</string>
    <string name="name">Name</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="login">Login</string>
    <string name="HaveAccount">Already have an account?</string>
    <string name="labelLogin">Welcome Back!</string>
    <string name="diagnose">Diagnose</string>
    <string name="patientList">Patient List</string>
    <string name="labelDiagnose">Fill this form to diagnose</string>
    <string name="Nik">NIK</string>
    <string name="Age">Age</string>
    <string name="Address">Address</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="labelGender">Gender</string>
    <string name="labelAddPhoto">Add Your CT Scan Photo</string>
    <string name="phase1">Phase I</string>
    <string name="idUser">ID : xxxx-xxxx-xxxx-xxxx</string>
    <string name="lbName">Bamabang Sekilas</string>
    <string name="lbStatus">Status</string>
    <string name="lbResult">Positive</string>
    <string name="check">Check Severity</string>
    <string name="phase2">Phase II</string>
    <string name="lbStatus2">SEVERITY</string>
    <string name="lbResult2">2</string>
    <string name="done">Done</string>
    <string name="lbTanggal">18 Mei 2022</string>
    <string name="lbStatuss">Status :</string>
    <string name="error_empty_email">email is empty</string>
    <string name="error_empty_password">password is empty</string>
    <string name="message_logout_confirm">Are you sure want logout ?</string>
    <string name="action_yes">Logout</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_logout">Logout</string>
    <string name="error_empty_name">Name is Empty</string>
    <string name="error_empty_nik">NIK is empty</string>
    <string name="error_empty_age">Age is empty</string>
    <string name="error_empty_address">Address is empty</string>
    <string name="title_message">Information</string>
    <string name="pick_image">Pick Image</string>
    <string name="title_choose_a_picture">Choose Picture</string>
    <string name="error_invalid_email">Email is invalid</string>
    <string name="error_nik_must_16">NIK must 16</string>

</resources>