<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.ui.diagnose.SecondProcessActivity">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/phase2"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:contentDescription="@string/desc"
        android:id="@+id/imageResult"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/background_menu"
        app:layout_constraintTop_toBottomOf="@+id/title"/>


    <TextView
        android:id="@+id/idUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idUser"
        android:fontFamily="@font/poppins"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageResult"/>

    <TextView
        android:id="@+id/lbName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbName"
        android:fontFamily="@font/poppins"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idUser"/>

    <TextView
        android:id="@+id/lbStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbStatus2"
        android:fontFamily="@font/poppins"
        android:layout_marginTop="50dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbName"/>

    <TextView
        android:id="@+id/lbResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbResult2"
        android:fontFamily="@font/poppins"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:background="@drawable/border"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbStatus"/>

    <Button
        android:id="@+id/btnDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingHorizontal="50dp"
        android:text="@string/done"
        android:fontFamily="@font/poppins"
        android:textSize="15sp"
        android:backgroundTint="@color/blue_light"
        android:textColor="@color/white"
        style="@style/Widget.Material3.Button.ElevatedButton"
        app:layout_constraintTop_toBottomOf="@+id/lbResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>