    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:background="@drawable/border_card"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:layout_marginHorizontal="20dp">

            <TextView
                android:id="@+id/lbTanggal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbTanggal"
                android:textSize="18sp"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/lbName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbName"
                android:textSize="18sp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/lbTanggal"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:id="@+id/lbStatusAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/lbName"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/lbStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbStatuss"
                    android:layout_marginTop="20dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/lbResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:text="@string/lbResult"
                    android:layout_marginTop="20dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <Button
                android:id="@+id/lbGender"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/blue_tranparant"
                android:fontFamily="@font/poppins"
                android:paddingHorizontal="50dp"
                android:text="@string/Male"
                android:textColor="@color/blue_grey"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/lbStatusAll"
                app:layout_constraintTop_toBottomOf="@+id/lbStatusAll"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/background"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/desc"
            android:scaleType="fitXY"
            android:src="@drawable/background_menu"/>

    </LinearLayout>





