<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.ui.diagnose.DiagnoseActivity">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diagnose"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelDiagnose"
        android:fontFamily="@font/poppins"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputFilledStyle"
        android:id="@+id/filledTextField"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:layout_constraintTop_toBottomOf="@+id/label">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:backgroundTint="@color/white"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputFilledStyle"
        android:id="@+id/filledTextField2"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Nik"
        app:layout_constraintTop_toBottomOf="@+id/filledTextField">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtNIK"
            android:layout_width="match_parent"
            android:backgroundTint="@color/white"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputFilledStyle"
        android:id="@+id/filledTextField3"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Age"
        app:layout_constraintTop_toBottomOf="@+id/filledTextField2">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtAge"
            android:layout_width="match_parent"
            android:backgroundTint="@color/white"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:hintTextAppearance="@style/InputTextFont"
        android:id="@+id/filledTextField4"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Address"
        app:layout_constraintTop_toBottomOf="@+id/filledTextField3">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtAddress"
            android:layout_width="match_parent"
            android:backgroundTint="@color/white"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>



    <TextView
        android:id="@+id/labelGender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="15dp"
        android:fontFamily="@font/poppins"
        android:textColor="@color/black"
        android:text="@string/labelGender"
        app:layout_constraintTop_toBottomOf="@+id/filledTextField4"
        app:layout_constraintStart_toStartOf="@+id/filledTextField4"
        app:layout_constraintEnd_toEndOf="@+id/filledTextField4" />



    <RadioGroup
        android:id="@+id/radioGroup"
        android:checkedButton="@+id/male"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/labelGender"
        app:layout_constraintStart_toStartOf="@+id/labelGender"
        app:layout_constraintEnd_toEndOf="@id/filledTextField4">

        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Male"/>
        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/Female"/>
    </RadioGroup>

    <LinearLayout
        android:id="@+id/addPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="@+id/radioGroup" >

        <Button
            android:id="@+id/btnAddPhoto"
            android:layout_width="50dp"
            android:layout_height="58dp"
            app:circularflow_defaultRadius="40dp"
            style="@style/Widget.Material3.Button.Icon"
            android:backgroundTint="@color/blue_light"
            app:icon="@drawable/ic_icon_addimage"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:textColor="@color/blue_light"
            android:text="@string/labelAddPhoto"
            android:layout_marginHorizontal="20dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingHorizontal="50dp"
        android:text="@string/diagnose"
        android:fontFamily="@font/poppins"
        android:textSize="15sp"
        android:backgroundTint="@color/blue_light"
        android:textColor="@color/white"
        style="@style/Widget.Material3.Button.ElevatedButton"
        app:layout_constraintTop_toBottomOf="@+id/addPhoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>