<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.ui.register.RegisterActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/small_logo"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/desc" />

    <TextView
        android:id="@+id/labelLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelRegister"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginTop="10dp"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputFilledStyle"
        android:id="@+id/filledTextField"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Email"
        app:layout_constraintTop_toBottomOf="@+id/labelLogo">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:backgroundTint="@color/white"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputFilledStyle"
        android:id="@+id/filledTextField2"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:layout_constraintTop_toBottomOf="@+id/filledTextField">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:backgroundTint="@color/white"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputFilledStyle"
        android:id="@+id/filledTextField3"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Password"
        app:layout_constraintTop_toBottomOf="@+id/filledTextField2">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:backgroundTint="@color/white"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        style="?attr/textInputFilledStyle"-->
<!--        android:id="@+id/filledTextField4"-->
<!--        android:layout_marginTop="25dp"-->
<!--        android:layout_marginHorizontal="20dp"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="@string/ConfirmPassword"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/filledTextField3">-->
<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/edtConfirmPassword"-->
<!--            android:layout_width="match_parent"-->
<!--            android:backgroundTint="@color/white"-->
<!--            android:layout_height="wrap_content"/>-->
<!--    </com.google.android.material.textfield.TextInputLayout>-->


    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:paddingHorizontal="50dp"
        android:text="@string/register"
        android:fontFamily="@font/poppins"
        android:textSize="15sp"
        android:backgroundTint="@color/grey"
        android:textColor="@color/white"
        style="@style/Widget.Material3.Button.ElevatedButton"
        app:layout_constraintTop_toBottomOf="@+id/filledTextField3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/labelHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/HaveAccount"
            android:fontFamily="@font/poppins"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/toRegister"
            android:layout_width="wrap_content"
            android:textColor="@color/blue"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:fontFamily="@font/poppins"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="5dp"
            app:layout_constraintStart_toEndOf="@id/labelNotHaveAccount"
            app:layout_constraintTop_toBottomOf="@id/labelNotHaveAccount" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
