<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ctscan.main.ui.menu.MenuActivity">


    <ImageView
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_exit"
        android:contentDescription="@string/desc"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardDiagnose"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:checkable="true"
            android:clickable="true"
            android:elevation="100dp"
            android:focusable="true"
            app:cardCornerRadius="30dp"
            app:cardPreventCornerOverlap="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageMenu1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@string/desc"
                android:scaleType="centerCrop"
                android:src="@drawable/background_menu" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/overlay" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/poppins"
                android:gravity="center|bottom"
                android:text="@string/diagnose"
                android:textColor="@color/white"
                android:textSize="30sp" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardPatient"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginTop="50dp"
            android:checkable="true"
            android:clickable="true"
            android:elevation="100dp"
            android:focusable="true"
            app:cardCornerRadius="30dp"
            app:cardPreventCornerOverlap="true"
            app:layout_constraintTop_toBottomOf="@+id/cardDiagnose">

            <ImageView
                android:id="@+id/imageMenu2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/desc"
                android:scaleType="centerCrop"
                android:src="@drawable/background_menu" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/overlay" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/poppins"
                android:gravity="center|bottom"
                android:text="@string/patientList"
                android:textColor="@color/white"
                android:textSize="30sp" />

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>